crates/apollo-compiler/test_data/diagnostics/0008_operation_with_undefined_variables_in_inline_fragment.txt
Error: variable `$value` is not defined
   ╭─[0008_operation_with_undefined_variables_in_inline_fragment.graphql:5:25]
   │
 5 │         price(setPrice: $value)
   │                         ───┬──  
   │                            ╰──── not found in this scope
───╯

